# ot2_piloting

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  well_status_utils.py
.github/workflows/: ci.yml
app/: __init__.py
app/core/analysis/: experiment_analyzer.py
app/core/auth/: auth_manager.py
app/core/config/: base_config.py  experiment_config.py  ot2_config.py
app/core/etl/: data_pipeline.py  transformations.py
app/core/interfaces/: data_collector.py  experiment_controller.py  optimizer.py
app/core/ml/: experiment_optimizer.py
app/core/monitoring/: experiment_monitor.py
app/core/optimization/: bayesian_optimizer.py
app/core/ot2/: color_optimizer.py  color_sensor.py  mqtt_client.py  ot2_controller.py
app/core/storage/: db_manager.py  experiment_repository.py  models.py
app/core/utils/: __init__.py  db_utils.py  (+1 more)
app/ui/: gradio_app.py
dbt/: dbt_project.yml
dbt/models/: sources.yml
docker/: .env.template  Dockerfile  docker-compose.yml  ot2-simulator.Dockerfile
docker/prometheus/: alert.rules.yml  prometheus.yml
docs/: architecture.md  cost_analysis.md  data_processing.md  deployment_guide.md  deployment_pipeline.md  evaluation_metrics.md  hardware_migration_guide.md  performance_benchmarks.md  repeatbility_analysis.md  system_design.md  work_progress.md
scripts/: init_db.py
simulator/: ot2_simulator.py
tests/: conftest.py  test_color_sensor.py  test_ot2_controller.py
tests/fixtures/: database.py
tests/unit/: test_db_manager.py
(+19 files in other folders)
